Projeto finalizado com comentários

--- a/area-adm-financeiro.html
+++ b/area-adm-financeiro.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="./index.css">
-    <title>Labescola - Início</title>
+    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./area-adm-financeiro.css">
+    <title>Labescola - Area ADM</title>
 </head>
 
 <body>
@@ -27,54 +27,54 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        <div class="container1">
-            <img src="./midia/background.png" alt="background" id="backgroundH">
-            <section class="container1centro">
-                <h1><b>Descubra o novo ensino!</b></h1>
-                <p id="subtitulo">Aprenda de verdade, no seu tempo, no seu ritmo</p>
-                <a class="botaocursos" href="./cursos.html" id="p-bottom">Conheça nossos cursos</a>
-            </section>
+        <aside>
+            <div class="nav-adm">
+                <a id="a-nav-turmas" href="./area-adm.html">Turmas</a>
+                <a id="a-nav-matriculas" href="./area-adm-matriculas.html">Matrículas</a>
+                <a id="a-nav-financeiro" href="./area-adm-financeiro.html">Financeiro Alunos</a>
+            </div>
+        </aside>
 
-        </div>
+        <section>
+            <div class="container">
+                <div class="visiveis">
 
+                    <div class="card">
+                        <h1>Financeiro</h1>
 
-        <div class="container2">
-            <section class="container2centro">
-                <h1>Sobre Nós</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam nam illo maxime sit, est numquam.
-                    Quo accusantium, possimus illum laudantium aspernatur totam fugit vero corporis sapiente placeat ad
-                    assumenda facilis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aliquid,
-                    consequatur vero architecto atque similique animi molestiae officiis maxime quo amet nihil voluptate
-                    soluta adipisci enim voluptatum voluptatibus sit quidem.</p>
-            </section>
-        </div>
-        <div class="container3">
-            <h1>Depoimentos</h1>
-            <section class="container3centro">
-                <div class="pessoas" id="person1">
-                    <img src="./midia/person1.png" alt="person1">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum quam maxime! Id eaque
-                        quibusdam natus</p>
+                        <label for="name">Curso</label>
+                        <input type="text" name="name" id="CursoFinanceiro" value="">
+                        <a value="#" id="adicionarCurso" onclick="adicionarAoCarrinho()">Adicionar curso</a>
+
+                        <label for="numParcelas">Número de parcelas</label>
+                        <input type="number" name="numParcelas" id="nParcelasFinanceiro" value="">
+
+                        <button onclick="verValor()" class="button" id="verValor">Ver valor</button>
+                    </div>
+
+                    <div class="card" id="relatorio-aluno">
+                        <h1>Relatório Aluno</h1>
+                        <div id="input">
+                            <label for="name">Nome</label>
+                            <input type="text" name="name" id="nomeRelatorio" value="">
+                            <button class="button-buscar" id="buttonBuscar"
+                                onclick="relatorioEstudante(buscarEstudante())">Buscar</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="pessoas" id="person2">
-                    <img src="./midia/person2.png" alt="person2">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit porro sit culpa, odit
-                        accusamus adipisci aliquid. Ipsam voluptatem suscipit aliquid quam aut cupiditate!</p>
+
+                <div class="nao-visiveis">
+
+                    <div class="card" id="valorRetornado">
+                    </div>
+
+                    <div class="card" id="relatorioRetornado">
+                    </div>
                 </div>
-                <div class="pessoas" id="person3">
-                    <img src="./midia/person3.png" alt="person3">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, nemo voluptatem doloribus
-                        nulla cumque ex sit maxime veritatis reiciendis error!!</p>
-                </div>
-                <div class="pessoas" id="person4">
-                    <img src="./midia/person4.png" alt="person4">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste dolore accusamus neque
-                        consequuntur, itaque delectus error sit dolor dolorem explicabo</p>
-                </div>
-            </section>
-        </div>
+            </div>
+
+        </section>
         <div class="whatsapp">
             <a href="https://web.whatsapp.com">
                 <img src="./midia/whatsApp.png" alt="WhatsApp Logo" id="whatsapp">
@@ -134,10 +134,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </footer>
 </body>
 
